# GTL_NMJW

./: .gitignore  CMakeLists.txt  GTL_NMJW  NMJW_GJ.sln  NMJW_GJ.vcxproj  NMJW_GJ.vcxproj.filters  avatar.xcf  backup_main.txt  buffer.hpp  build.sh  controller.hpp  controls.cpp  controls.hpp  datatypes.hpp  keyboard.txt  loader.cpp  loader.hpp  macros_and_headers.txt  main.cpp  model.cpp  model.hpp  postbox.cpp  postbox.hpp  renderer.cpp  renderer.hpp  rubik.cpp  rubik.hpp
dependencies/include/: controls.hpp  datatypes.hpp
shaders/: 0.vertex  2Dtexture.fragment  2Dtexture.vertex  2Dtexture_v.glsl  colour_v.glsl  displacement.fragment  displacement.vertex  displacement_f.glsl  displacement_v.glsl  multicolour_f.glsl  multicolour_v.glsl  singlecolour_f.glsl  singlecolour_v.glsl  subunit.fragment  subunit.vertex  subunit_f.glsl  subunit_v.glsl  texture.fragment  texture.vertex
textures/: hintze.xcf  wall.xcf
